--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -1012,7 +1012,7 @@
     "\n",
     "1. Which model had the best balanced accuracy score?\n",
     "\n",
-    "   YOUR ANSWER HERE.\n",
+    "   YOUR ANSWER mmHERE.\n",
     "\n",
     "2. Which model had the best recall score?\n",
     "\n",
